prep/netpol.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: nsx-demo-policy
spec:
  podSelector:
    matchLabels:
      app: yelb-db
      tier: backenddb
  ingress:
  - from:
      - namespaceSelector:
          matchLabels:
            app: yelb-appserver
            tier: middletier
    ports:
      - port: 5432
        protocol: TCP
